fixed wrapper spacing

--- a/src/index.css
+++ b/src/index.css
@@ -64,12 +64,15 @@ li::before {
   content: "🌱 ";
 }
 
+form {
+  margin-bottom: 4em;
+}
+
 div.section {
   margin-top: 4em;
 }
 
 div.danger {
-  margin-top: 6em;
   background-color: rgb(208, 48, 0);
   padding: 3em;
   width: 70%;
@@ -77,7 +80,7 @@ div.danger {
 }
 
 div.lucky-duck {
-  margin-bottom: 10em;
+  margin-bottom: 5em;
 }
 
 @media(max-width: 720px) {
